🐞 fix(components): wrong padding & dislocation when newline

--- a/src/components/number.less
+++ b/src/components/number.less
@@ -1,14 +1,15 @@
 .dx-number {
+	--dx-number-padding: 0 var(--u-01-xs);
 	--dx-number-text-align: right;
 
 	width: 100%;
 	height: var(--label);
+	padding: var(--dx-number-padding);
 	line-height: var(--label);
 	color: var(--title);
 	font-size: var(--strong);
 	text-align: var(--dx-number-text-align);
 	box-sizing: border-box;
-	padding: 0 var(--u-01-xs);
 	position: relative;
 
 }
