--- a/src/components/sticker.less
+++ b/src/components/sticker.less
@@ -15,6 +15,7 @@
 		display: flex;
 		justify-content: flex-end;
 		align-items: center;
+		box-sizing: border-box;
 		padding: 0 var(--u-01-m);
 		background: var(--popup);
 		z-index: 1;
