--- a/src/components/textarea.less
+++ b/src/components/textarea.less
@@ -1,9 +1,12 @@
 .dx-textarea {
+	--dx-textarea-padding: 0 var(--u-01-xs);
+
 	width: 100%;
 	color: var(--title);
 	font-size: var(--strong);
 	box-sizing: border-box;
-	padding: var(--u-01-xs);
+	line-height: var(--label);
+	padding: var(--dx-textarea-padding);
 	position: relative;
 
 }
