--- a/src/components/turnstile.less
+++ b/src/components/turnstile.less
@@ -4,9 +4,7 @@
 
 
 	width: 100%;
-	height: var(--label);
 	display: flex;
-	align-items: center;
 	justify-content: var(--dx-turnstile-justify-content);
 	box-sizing: border-box;
 	padding: var(--dx-turnstile-padding);
@@ -22,6 +20,11 @@
 			font-size: var(--normal);
 
 		}
+
+	}
+
+	.icon {
+		flex-shrink: 0;
 
 	}
 
